--- a/q/70365.html
+++ b/q/70365.html
@@ -26,16 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>004</td><td>Uiua</td><td>240525T164154Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/273310#273310">noodle m</a></td></tr>
-<tr d-ix="1"><td>003</td><td>Pip</td><td>221202T024650Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/255103#255103">naffetS</a></td></tr>
-<tr d-ix="2"><td>045</td><td>Bash w/ coreutils and awk</td><td>170703T142446Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/129622#129622">Xophmeis</a></td></tr>
-<tr d-ix="3"><td>383</td><td>Malbolge Unshackled</td><td>231103T085604Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/266428#266428">Kamila S</a></td></tr>
-<tr d-ix="4"><td>016</td><td>Kamilalisp</td><td>231001T174353Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/265658#265658">Kamila S</a></td></tr>
-<tr d-ix="5"><td>152</td><td>jamforth</td><td>230904T204310Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/264897#264897">allisonl</a></td></tr>
-<tr d-ix="6"><td>004</td><td>Itr</td><td>230814T152653Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/264158#264158">bsoelch</a></td></tr>
-<tr d-ix="7"><td>202</td><td>TSQL</td><td>230815T040421Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/264184#264184">DanielOn</a></td></tr>
-<tr d-ix="8"><td>004</td><td>Thunno 2</td><td>230607T074046Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/261616#261616">The Thon</a></td></tr>
-<tr d-ix="9"><td>110</td><td>Fortran GFortran</td><td>230529T061012Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/261309#261309">roblogic</a></td></tr>
+<tr d-ix="0"><td>086</td><td>Fortran GFortran</td><td>230529T061012Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/261309#261309">roblogic</a></td></tr>
+<tr d-ix="1"><td>004</td><td>Uiua</td><td>240525T164154Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/273310#273310">noodle p</a></td></tr>
+<tr d-ix="2"><td>003</td><td>Pip</td><td>221202T024650Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/255103#255103">naffetS</a></td></tr>
+<tr d-ix="3"><td>045</td><td>Bash w/ coreutils and awk</td><td>170703T142446Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/129622#129622">Xophmeis</a></td></tr>
+<tr d-ix="4"><td>383</td><td>Malbolge Unshackled</td><td>231103T085604Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/266428#266428">Kamila S</a></td></tr>
+<tr d-ix="5"><td>016</td><td>Kamilalisp</td><td>231001T174353Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/265658#265658">Kamila S</a></td></tr>
+<tr d-ix="6"><td>152</td><td>jamforth</td><td>230904T204310Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/264897#264897">allisonl</a></td></tr>
+<tr d-ix="7"><td>004</td><td>Itr</td><td>230814T152653Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/264158#264158">bsoelch</a></td></tr>
+<tr d-ix="8"><td>202</td><td>TSQL</td><td>230815T040421Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/264184#264184">DanielOn</a></td></tr>
+<tr d-ix="9"><td>004</td><td>Thunno 2</td><td>230607T074046Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/261616#261616">The Thon</a></td></tr>
 <tr d-ix="10"><td>003</td><td>Nekomata</td><td>230529T030943Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/261307#261307">alephalp</a></td></tr>
 <tr d-ix="11"><td>005</td><td>Pyt</td><td>230213T123823Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/257751#257751">Kip the </a></td></tr>
 <tr d-ix="12"><td>036</td><td>Arturo</td><td>230213T114057Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/257748#257748">chunes</a></td></tr>
@@ -134,19 +134,26 @@
 <tr d-ix="105"><td>004</td><td>Octave</td><td>160128T182417Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/70367#70367">a spaghe</a></td></tr>
 <tr d-ix="106"><td>054</td><td>Haskell</td><td>160128T182930Z</td><td><a href="https://codegolf.stackexchange.com/questions/70365/construct-the-identity-matrix/70370#70370">ThreeFx</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, 4 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/fortran/" rel="nofollow noreferrer">Fortran (GFortran)</a>, <sub><s>110</s></sub> 86 bytes</h1>
+<pre class="lang-fortran prettyprint-override"><code>allocatable K(:);read*,n;allocate(K(n));do5 i=1,n;K=0;K(i)=1
+5 print*,(K(j),j=1,n);end
+</code></pre>
+<p><a href="https://tio.run/##LcpBCoAgEEDRvadw6YRBLiJIPIGnmNLCkDEG729G7T68fxSujDSexxetYc5lx4pbjtKrFSxHDIMm@0NUXhGACGWWyZkO3k3WqwTOiFnenKgOuk8X6Ot1EJFCa8sD" rel="nofollow noreferrer">Try it online!</a>
+<sub><s><a href="https://tio.run/##LYtBCsQgDEX3PUWXSUlhuioYPIGnSEc7WCQW8f5W6Ww@n/d4Zy61iK6/8z2tSUr5K1WOFGYHhgxyCeIXUv6rAA6UFJGd/XAPO4doN6PoIFJEu00@z5305i5R60IwzIV0DYgc1Ps8trX9AQ" rel="nofollow noreferrer">110b</a></s></sub></p>
+</div>
+<div id="pu1" class="pu"><h1>Uiua, 4 bytes</h1>
 <pre><code>⊞=.⇡
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_11_0-dev_1__RiDihpAg4oqePS7ih6EKCkYgMQpGIDIKRiAzCkYgNAo=" rel="nofollow noreferrer">Try it online!</a></p>
 <p>Read: <code>⊞</code> table of <code>=</code> equality by <code>.</code> two copies of <code>⇡</code> the numeric range 0 to the input.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a>, 3 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a>, 3 bytes</h1>
 <pre><code>EYa
 </code></pre>
 <p><a href="https://dso.surge.sh/#@WyJwaXAiLCIiLCJFWWEiLCIiLCIiLCItcCA5Il0=" rel="nofollow noreferrer">Try It Online!</a></p>
 <p>Builtin.</p>
 </div>
-<div id="pu2" class="pu"><h1>Bash (w/ coreutils and awk), <s>51</s> <s>50</s> 45 bytes</h1>
+<div id="pu3" class="pu"><h1>Bash (w/ coreutils and awk), <s>51</s> <s>50</s> 45 bytes</h1>
 <pre><code>yes 0|head -$((N*N))|xargs -n$N|awk {\$NR=1}1
 </code></pre>
 <h2>Usage</h2>
@@ -168,16 +175,16 @@ $ yes 0|head -$((N*N))|xargs -n$N|awk {\$NR=1}1
 </ul>
 <p>There may be a shorter way to generate N<sup>2</sup> lines of <code>0</code>s, but I haven't found one yet...</p>
 </div>
-<div id="pu3" class="pu"><h2>Malbolge Unshackled, 1,664,383 bytes.</h2>
+<div id="pu4" class="pu"><h2>Malbolge Unshackled, 1,664,383 bytes.</h2>
 <p>A <a href="https://github.com/kspalaiologos/codegolf-submissions/blob/master/70365.mb" rel="nofollow noreferrer">link to GitHub</a> as StackExchange does not allow posting answers so long. One of my fastest Malbolge programs.</p>
 <p><a href="https://i.sstatic.net/YqdL2.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/YqdL2.png" alt="I(16)" /></a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/kspalaiologos/kamilalisp" rel="nofollow noreferrer">Kamilalisp</a>, 16 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/kspalaiologos/kamilalisp" rel="nofollow noreferrer">Kamilalisp</a>, 16 bytes</h1>
 <pre><code>[$(⌼ =) #0 #0]∘⍳
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70qOzE3MycxJ7O4YMEyjZTUNIXMpaUlaboW26JVNB717FGw1VRQNgCi2EcdMx71boZIbtHk0sjMtyovyixJzclT0MhUsNTUhEgtWAChAQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/ambyshframber/jamforth" rel="nofollow noreferrer">jamforth</a>, 152 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/ambyshframber/jamforth" rel="nofollow noreferrer">jamforth</a>, 152 bytes</h1>
 
 <pre class="lang-forth prettyprint-override"><code>: F DUP DUP 2* 1- DUP ALLOT SWAP DFOR 2DUP + 48 SWAP C! REPEAT TUCK + 1- 49 SWAP C! SWAP TUCK + 1- SWAP DUP DFOR -ROT 2DUP TELL CR -ROT 1- -ROT REPEAT ;</code></pre>
 <p>196 bytes compiled, theoretically half that on a 16 bit machine or token threaded forth with 16 bit tokens. F, when called, prints the NxN identity matrix where N is the number on top of the stack.</p>
@@ -204,7 +211,7 @@ $ yes 0|head -$((N*N))|xargs -n$N|awk {\$NR=1}1
 </code></pre>
 <p>I know I committed to jamforth about 25 minutes before posting this, but I wrote DFOR a few weeks back and just didn't get around to committing it.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/bsoelch/OneChar.js/blob/main/ItrLang.md" rel="nofollow noreferrer">Itr</a>, 4 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/bsoelch/OneChar.js/blob/main/ItrLang.md" rel="nofollow noreferrer">Itr</a>, 4 bytes</h1>
 <p><code>ºµÍT</code></p>
 <p>using array operations, returns a nested array</p>
 <p><a href="https://bsoelch.github.io/OneChar.js/?lang=Itr&amp;src=urXNVA==&amp;in=NQ==" rel="nofollow noreferrer">online interpreter</a></p>
@@ -225,7 +232,7 @@ $ yes 0|head -$((N*N))|xargs -n$N|awk {\$NR=1}1
      ; implicit output
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://learn.microsoft.com/en-us/sql/t-sql/language-reference?view=sql-server-ver16" rel="nofollow noreferrer"><strong>T-SQL</strong></a>, 202 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://learn.microsoft.com/en-us/sql/t-sql/language-reference?view=sql-server-ver16" rel="nofollow noreferrer"><strong>T-SQL</strong></a>, 202 bytes</h1>
 <p><code>DECLARE @s VARCHAR(MAX);SELECT @s='SELECT '+STRING_AGG('CASE WHEN value='+CAST(value AS CHAR)+' THEN 1 ELSE 0 END',',')+' FROM GENERATE_SERIES(1,'+CAST(@n AS CHAR)+')'FROM GENERATE_SERIES(1,@n);EXEC(@s)</code></p>
 <p><a href="https://dbfiddle.uk/BitVjfte" rel="nofollow noreferrer">dbfiddle</a></p>
 <p>Explanation:</p>
@@ -252,7 +259,7 @@ EXEC(@s) -- Executes the string @s as t-sql code.
 <p>Will only work on SQL server 2022 or greater (GENERATE_SERIES needs compatibility level 160 or greater). Likely also work on Azure SQL database etc...</p>
 <p>There is already a superior (in terms of byte count) <a href="https://codegolf.stackexchange.com/a/70967/101226"><strong>oracle sql answer</strong></a>. But that answer produces a single string column of zeros and ones, whereas this answer produces an n by n table of numeric zeros and ones. So I figured this was different enough to still share.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/Thunno/Thunno2" rel="nofollow noreferrer">Thunno 2</a>, 4 <a href="https://github.com/Thunno/Thunno2/blob/main/docs/codepage.md" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/Thunno/Thunno2" rel="nofollow noreferrer">Thunno 2</a>, 4 <a href="https://github.com/Thunno/Thunno2/blob/main/docs/codepage.md" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>RD€=
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m728JKM0Ly_faMGCpaUlaboWy4JcHjWtsV1SnJRcDBVasNAEwgAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -264,12 +271,6 @@ R     # Push the range [1..n]
  D    # The range [1..n]
       # Implicit output
 </code></pre>
-</div>
-<div id="pu9" class="pu"><h1><a href="https://gcc.gnu.org/fortran/" rel="nofollow noreferrer">Fortran (GFortran)</a>, 110 bytes</h1>
-<pre class="lang-fortran prettyprint-override"><code>allocatable K(:,:);read*,n;allocate(K(n,n));K=0;forall(i=1:n)K(i,i)=1
-do i=1,n;print*,(K(i,j),j=1,n);enddo;end
-</code></pre>
-<p><a href="https://tio.run/##LYtBCsQgDEX3PUWXSUlhuioYPIGnSEc7WCQW8f5W6Ww@n/d4Zy61iK6/8z2tSUr5K1WOFGYHhgxyCeIXUv6rAA6UFJGd/XAPO4doN6PoIFJEu00@z5305i5R60IwzIV0DYgc1Ps8trX9AQ" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
 <div id="pu10" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 3 bytes</h1>
 <pre><code>ᵒ-¬
