--- a/q/275212.html
+++ b/q/275212.html
@@ -26,13 +26,28 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>030</td><td>Wolfram Language Mathematica</td><td>240828T191925Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275215#275215">att</a></td></tr>
+<tr d-ix="0"><td>009</td><td>Stax</td><td>240828T193443Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275216#275216">Khuldrae</a></td></tr>
+<tr d-ix="1"><td>028</td><td>Wolfram Language Mathematica</td><td>240828T191925Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275215#275215">att</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 30 bytes</h1>
-<pre><code>FreeQ[#|#,{___,0,1,0,___}]&amp;
+<div id="pu0" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, 9 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>üo∟Ö╘└└⌂o
 </code></pre>
-<p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7360oNTUwWrlG@X1/u051fHy8joGOIRADWbWxav8DijLzSqKVde3SHELyXSsKilKLizPz8xycMxKLEpNLUouKHYJLgGrSgwtyMoEKdZS4lGLBhJqDFkQmKLUgJzE5NVpJQUnXTkkpti44OTGvrppLyUABCrkwWYZYWAZKOlBNXIYIxSBBJC6YNIQIgiFYrSFYDxhiShmiSkGtMYSZA1YCFOWq/Q8A" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
-<p>Returns <code>True</code> if all boxes are stuck, and <code>False</code> otherwise. <code></code> is <code>\[Transpose]</code>.</p>
+<p><a href="https://staxlang.xyz/#p=816f1c99d4c0c07f6f&amp;i=%5B%5B1,1,1,1,1%5D,%5B1,1,1,1,1%5D,%5B1,1,1,1,2%5D,%5B1,1,1,1,2%5D,%5B1,1,1,1,1%5D%5D%0A%5B%5B1,1,1%5D,%5B2,1,1%5D,%5B1,1,1%5D%5D%0A%5B%5B2,1,1%5D,%5B1,1,1%5D,%5B1,1,2%5D%5D%0A%5B%5B2,2,2,2%5D,%5B2,1,2,1%5D,%5B2,2,2,2%5D%5D%0A%5B%5B2,2,2,2%5D,%5B2,1,2,2%5D,%5B2,2,2,2%5D%5D%0A%5B%5B2,1%5D%5D%0A%5B%5B1,2,1,2%5D%5D%0A%5B%5B1,2,2,1%5D%5D&amp;a=1&amp;m=2" rel="nofollow noreferrer">Run and debug it at staxlang.xyz!</a></p>
+<p>Takes input as a list of rows, each cell represented as integer 1 for empty and 2 for box. Output is falsy for stuck and truthy for not stuck.</p>
+<h3>Unpacked (10 bytes)</h3>
+<pre><code>cM+J11JE|I
+cM            copy on stack, transpose copy
+  +           concat original and transposed
+   J          join on 0
+    11JE      literal [1,2,1]
+        |I    all indices
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 28 bytes</h1>
+<pre><code>FreeQ[#|#,{___,,1,,___}]&amp;
+</code></pre>
+<p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7360oNTUwWrlG@X1/u051fHy8jo6hjg6Qro1V@x9QlJlXEq2sa5cWHZLvWlFQlFpcnJmf5@CckViUmFySWlTsEFwCVJMeXJCTCVSoo8SlpK@nYKBr51eakxMbC@LHqjloQRQFpRbkJCanRispKOnaKSnF1gUnJ@bVVXMpGShAIRcmyxALy0BJB6qJyxChGCSIxAWThhBBMASrNQTrAUNMKUNUKag1hjBzwEqAoly1/wE" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
+<p>Input an array with <code>1</code> for boxes and <code>Null</code> for empty spaces. Returns <code>True</code> if all boxes are stuck, and <code>False</code> otherwise. <code></code> is <code>\[Transpose]</code>.</p>
 </div>
 
 <table id="st">
