--- a/q/275212.html
+++ b/q/275212.html
@@ -32,15 +32,15 @@
 <div id="pu0" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, 9 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>üo∟Ö╘└└⌂o
 </code></pre>
-<p><a href="https://staxlang.xyz/#p=816f1c99d4c0c07f6f&amp;i=%5B%5B1,1,1,1,1%5D,%5B1,1,1,1,1%5D,%5B1,1,1,1,2%5D,%5B1,1,1,1,2%5D,%5B1,1,1,1,1%5D%5D%0A%5B%5B1,1,1%5D,%5B2,1,1%5D,%5B1,1,1%5D%5D%0A%5B%5B2,1,1%5D,%5B1,1,1%5D,%5B1,1,2%5D%5D%0A%5B%5B2,2,2,2%5D,%5B2,1,2,1%5D,%5B2,2,2,2%5D%5D%0A%5B%5B2,2,2,2%5D,%5B2,1,2,2%5D,%5B2,2,2,2%5D%5D%0A%5B%5B2,1%5D%5D%0A%5B%5B1,2,1,2%5D%5D%0A%5B%5B1,2,2,1%5D%5D&amp;a=1&amp;m=2" rel="nofollow noreferrer">Run and debug it at staxlang.xyz!</a></p>
+<p><a href="https://staxlang.xyz/#p=816f1c99d4c0c07f6f&amp;i=%5B%5B1,1,1,1,1%5D,%5B1,1,1,1,1%5D,%5B1,1,1,1,2%5D,%5B1,1,1,1,2%5D,%5B1,1,1,1,1%5D%5D%0A%5B%5B1,1,1%5D,%5B2,1,1%5D,%5B1,1,1%5D%5D%0A%5B%5B2,1,1%5D,%5B1,1,1%5D,%5B1,1,2%5D%5D%0A%5B%5B2,2,2,2%5D,%5B2,1,2,1%5D,%5B2,2,2,2%5D%5D%0A%5B%5B2,2,2,2%5D,%5B2,1,2,2%5D,%5B2,2,2,2%5D%5D%0A%5B%5B2,1%5D%5D%0A%5B%5B1,2,1,2%5D%5D%0A%5B%5B1,2,2,1%5D%5D&amp;a=1&amp;m=2" rel="nofollow noreferrer">Run and debug it at staxlang.xyz!</a> <sup><a href="https://staxlang.xyz/#c=cM%2BJ11JE%7CI%25&amp;i=%5B%5B1,1,1,1,1%5D,%5B1,1,1,1,1%5D,%5B1,1,1,1,2%5D,%5B1,1,1,1,2%5D,%5B1,1,1,1,1%5D%5D%0A%5B%5B1,1,1%5D,%5B2,1,1%5D,%5B1,1,1%5D%5D%0A%5B%5B2,1,1%5D,%5B1,1,1%5D,%5B1,1,2%5D%5D%0A%5B%5B2,2,2,2%5D,%5B2,1,2,1%5D,%5B2,2,2,2%5D%5D%0A%5B%5B2,2,2,2%5D,%5B2,1,2,2%5D,%5B2,2,2,2%5D%5D%0A%5B%5B2,1%5D%5D%0A%5B%5B1,2,1,2%5D%5D%0A%5B%5B1,2,2,1%5D%5D&amp;a=1&amp;m=2" rel="nofollow noreferrer">with printable 0/1 output</a></sup></p>
 <p>Takes input as a list of rows, each cell represented as integer 1 for empty and 2 for box. Output is falsy for stuck and truthy for not stuck.</p>
+<p>I might be able to get away with <code>â╧óΩ═àN♣</code> for 8 bytes, replacing the unpacked <code>|I</code> with just <code>I</code>. That would produce -1 for stuck and &gt;=0 for not stuck, not quite as much <code>a designated &quot;yes&quot; value or &quot;no&quot; value</code> as falsy/truthy.</p>
 <h3>Unpacked (10 bytes)</h3>
 <pre><code>cM+J11JE|I
-cM            copy on stack, transpose copy
-  +           concat original and transposed
+cM+           concat with transposed copy
    J          join on 0
     11JE      literal [1,2,1]
-        |I    all indices
+        |I    all indices of subarray
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 28 bytes</h1>
