--- a/q/275212.html
+++ b/q/275212.html
@@ -26,10 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>009</td><td>Stax</td><td>240828T193443Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275216#275216">Khuldrae</a></td></tr>
-<tr d-ix="1"><td>028</td><td>Wolfram Language Mathematica</td><td>240828T191925Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275215#275215">att</a></td></tr>
+<tr d-ix="0"><td>095</td><td>Python</td><td>240828T202651Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275218#275218">shape wa</a></td></tr>
+<tr d-ix="1"><td>009</td><td>Stax</td><td>240828T193443Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275216#275216">Khuldrae</a></td></tr>
+<tr d-ix="2"><td>028</td><td>Wolfram Language Mathematica</td><td>240828T191925Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275215#275215">att</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, 9 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 95 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>lambda d:any((g:=lambda a,b:d.get((x+a,y+b),0))(0,0)&lt;g(-1,0)&amp;g(1,0)|g(0,-1)&amp;g(0,1)for(x,y)in d)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=dZFNTsMwEIXF1qcYZUHGqlPFO2TRA7DiAAQht3HSSK0TOQ40Kj0Jm0oITsQGToOdpL8UW8qM37zvRbLfPqvWzku9fc8myUdjs-jm-2khl9NUQiqkbhFzMRkEyaYiHefKIq5GkrWjKWUxpRi7722OEXf1OkdfXnOnRtwfY8ZpVhpcsZYWGlLa_-bn6itVGcxK_ayMRatqO5O1ooKAW0bZxmhYOwpaKoBDBIW2OJtLQzuHXy4WWgamfHFDULpZKiOt2oeNa2uKCum4rhaFxTDRIT2lXbyPPMVd3kBQuiHE-3aJ3vgQBAGJYdgXOn6hi4mjGOxRwg_IYXQs9vzRqNudhXd8f_7HwE8MJHRq6ErHAt-1XiWPAirjLzcL73TVWJHo9fkNbhKd6PvG-jGsM_zzbL0jHB53u-3rLw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Takes a dict, with keys being (x, y) coordinates and values being either 0 for box or 1 for empty space (the opposite of what's listed in the question; you can change <code>d.get((x+a,y+b),0)</code> to <code>1-d.get((x+a,y+b),1)</code> to un-swap them for +2 bytes). Returns false for stuck and true for non-stuck.</p>
+<p>Explanation: as was stated in the sandbox, this challenge boils down to finding a horizontal or vertical instance of the pattern <code>[space] [box] [space]</code> (one of the spaces gets filled in by the player; the box gets pushed into the other space). The code is a straightforward translation of the brute-force approach of testing<br />
+<code>[center=box] AND (([left=space] AND [right=space]) OR ([up=space] AND [down=space]))</code><br />
+at every possible location.</p>
+<p>Out-of-bounds coordinates are treated as having boxes. The <code>[center=box] AND [condition]</code> is equivalent to <code>(NOT [center=space]) AND [condition]</code>, which is equivalent to <code>[center=space] &lt; [condition]</code> (in order for it to hold, the left hand side must be false/0 and the right hand side must be true/1).</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, 9 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>üo∟Ö╘└└⌂o
 </code></pre>
 <p><a href="https://staxlang.xyz/#p=816f1c99d4c0c07f6f&amp;i=%5B%5B1,1,1,1,1%5D,%5B1,1,1,1,1%5D,%5B1,1,1,1,2%5D,%5B1,1,1,1,2%5D,%5B1,1,1,1,1%5D%5D%0A%5B%5B1,1,1%5D,%5B2,1,1%5D,%5B1,1,1%5D%5D%0A%5B%5B2,1,1%5D,%5B1,1,1%5D,%5B1,1,2%5D%5D%0A%5B%5B2,2,2,2%5D,%5B2,1,2,1%5D,%5B2,2,2,2%5D%5D%0A%5B%5B2,2,2,2%5D,%5B2,1,2,2%5D,%5B2,2,2,2%5D%5D%0A%5B%5B2,1%5D%5D%0A%5B%5B1,2,1,2%5D%5D%0A%5B%5B1,2,2,1%5D%5D&amp;a=1&amp;m=2" rel="nofollow noreferrer">Run and debug it at staxlang.xyz!</a> <sup><a href="https://staxlang.xyz/#c=cM%2BJ11JE%7CI%25&amp;i=%5B%5B1,1,1,1,1%5D,%5B1,1,1,1,1%5D,%5B1,1,1,1,2%5D,%5B1,1,1,1,2%5D,%5B1,1,1,1,1%5D%5D%0A%5B%5B1,1,1%5D,%5B2,1,1%5D,%5B1,1,1%5D%5D%0A%5B%5B2,1,1%5D,%5B1,1,1%5D,%5B1,1,2%5D%5D%0A%5B%5B2,2,2,2%5D,%5B2,1,2,1%5D,%5B2,2,2,2%5D%5D%0A%5B%5B2,2,2,2%5D,%5B2,1,2,2%5D,%5B2,2,2,2%5D%5D%0A%5B%5B2,1%5D%5D%0A%5B%5B1,2,1,2%5D%5D%0A%5B%5B1,2,2,1%5D%5D&amp;a=1&amp;m=2" rel="nofollow noreferrer">with printable 0/1 output</a></sup></p>
@@ -43,7 +54,7 @@ cM+           concat with transposed copy
         |I    all indices of subarray
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 28 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 28 bytes</h1>
 <pre><code>FreeQ[#|#,{___,,1,,___}]&amp;
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7360oNTUwWrlG@X1/u051fHy8jo6hjg6Qro1V@x9QlJlXEq2sa5cWHZLvWlFQlFpcnJmf5@CckViUmFySWlTsEFwCVJMeXJCTCVSoo8SlpK@nYKBr51eakxMbC@LHqjloQRQFpRbkJCanRispKOnaKSnF1gUnJ@bVVXMpGShAIRcmyxALy0BJB6qJyxChGCSIxAWThhBBMASrNQTrAUNMKUNUKag1hjBzwEqAoly1/wE" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
