--- a/q/275210.html
+++ b/q/275210.html
@@ -26,10 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>015</td><td>Uiua</td><td>240828T194612Z</td><td><a href="https://codegolf.stackexchange.com/questions/275210/parse-minecrafts-varint/275217#275217">nyxbird</a></td></tr>
-<tr d-ix="1"><td>035</td><td>JavaScript ES6</td><td>240828T181212Z</td><td><a href="https://codegolf.stackexchange.com/questions/275210/parse-minecrafts-varint/275211#275211">Arnauld</a></td></tr>
+<tr d-ix="0"><td>034</td><td>JavaScript ES6</td><td>240828T181212Z</td><td><a href="https://codegolf.stackexchange.com/questions/275210/parse-minecrafts-varint/275211#275211">Arnauld</a></td></tr>
+<tr d-ix="1"><td>015</td><td>Uiua</td><td>240828T194612Z</td><td><a href="https://codegolf.stackexchange.com/questions/275210/parse-minecrafts-varint/275217#275217">nyxbird</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 15 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), <s> 35 </s> 34 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=([v,...a])=&gt;v&amp;&amp;v^(v&amp;=128)|v*f(a)
+</code></pre>
+<p><a href="https://tio.run/##dY6xDoIwFEV3v6ITac2j9LVVyoCb/ATBpEEgGkKNmMbBf69oog7gHc52Tu7ZejvW19PlFg/u2ITQ5rT0wDm3Fct3Por8gfooR2nYw69balmo3TC6vuG962hLSyLuBmGiEKRijMyXJARXc6so4Mu0mLmTJUFkKeBmyTYCFinMuzTZsQTUKWijYKvN/wP7F7X6nVHyk0BAVJAZFZ4" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 15 bytes</h1>
 <pre><code>°⋯♭▽≤⊗0:°⊏≡⍜⇌°⊂
 </code></pre>
 <p>Takes input as an array of 8-bit bytes (lsb-first)</p>
@@ -41,12 +47,6 @@
    ▽≤           # keep the rows &lt;= to its location
 °⋯♭             # flatten and convert from binary
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 35 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>f=([v,...a])=&gt;v&amp;127|(v&gt;&gt;7&amp;&amp;f(a)&lt;&lt;7)
-</code></pre>
-<p><a href="https://tio.run/##dY6xDoIwFEV3v6ITaZNH6WurLQmwyU8QhgbBaAg1YhoH/x3RRB3AO5ztnNyzC25srqfLLR78oZ2mLqdVAM65q1lehAiledBQFCaKOupYlhk2NX4Yfd/y3h9pRysi7hZhphCkZowslyQEN0urLOFLUy7c2ZIgUgO4XbOtgFUK@y7NdiwBtQFtFey0/X9g/6JWvzNKfhKIqFKrpic" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 
 <table id="st">
