--- a/q/275212.html
+++ b/q/275212.html
@@ -26,18 +26,32 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>075</td><td>JavaScript ES11</td><td>240828T205810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275219#275219">Arnauld</a></td></tr>
-<tr d-ix="1"><td>095</td><td>Python</td><td>240828T202651Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275218#275218">shape wa</a></td></tr>
-<tr d-ix="2"><td>009</td><td>Stax</td><td>240828T193443Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275216#275216">Khuldrae</a></td></tr>
-<tr d-ix="3"><td>028</td><td>Wolfram Language Mathematica</td><td>240828T191925Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275215#275215">att</a></td></tr>
+<tr d-ix="0"><td>053</td><td>Python</td><td>240828T210306Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275220#275220">Albert.L</a></td></tr>
+<tr d-ix="1"><td>075</td><td>JavaScript ES11</td><td>240828T205810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275219#275219">Arnauld</a></td></tr>
+<tr d-ix="2"><td>095</td><td>Python</td><td>240828T202651Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275218#275218">shape wa</a></td></tr>
+<tr d-ix="3"><td>009</td><td>Stax</td><td>240828T193443Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275216#275216">Khuldrae</a></td></tr>
+<tr d-ix="4"><td>028</td><td>Wolfram Language Mathematica</td><td>240828T191925Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275215#275215">att</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES11), 75 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 53 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>lambda d:&quot;010&quot;in(n:=d.find(&quot;\n&quot;))*(d+n*&quot;\n&quot;)[::n+1]+d
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=dZHBSsQwEIbxmqcYcmmyraU5CBLYB_DkA7RF6ibBQnca0lSQxSfxsiD6Tnr0SUzb7e4q3cwhk5n_mx8mb5_2xT-1uH836-Kj9-b69uumqbaPqgIlaSYyWiNDuVapqVExWiDlfMVUjKsxz6XEWJSxmuDvqx-lDWxafNbOPzRtw7zu_KbqNJcEwnHa9w4hz1fbyrIafeLSzja1Z5yXpnXgoEaYobTzrraMHySjZUnIuUdQXPA4DnHaNtVGMwo0oZTPQ-NhHCGD6SwdvHNKKcngEAuZWMgyEqgEjigRJ-TUOi9O_FlrjFEiRn56XxCIPwIShWoUrpEFMadDlZQSrAuLZia6Q9t7WeDu_35fCyzwvvdDG3aGLS53UkV8-ur9frp_AQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Expects a single string consisting of newline-terminated lines of 0s and 1s.</p>
+<h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 65 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>lambda d:any((0,1,0)in[*zip(a,a[1:],a[2:])]for a in[*d,*zip(*d)])
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=dVFNSsQwFMZtTvHIpkmJQ-NKCi5cuvIAbZHYJljopCFNhXHwJG4KondS8C6mzXSmSieBvJf3_UHy9ml27qnVw7u6yT96py6vv24bsX2sBFSp0DtCEsZZQmudxS-1IYKJjKeFP6_SghaqtSBgBCs24XFFCxqMvi9-KqmgbPWztO6haRviZOdK0UmaIvDLStdbDVkWb4UhtXbMbjrT1I7QYG29NcyiTeesT6AHCs41pgVCywzPOJNxNLHSNKKUBANmGNPZFKExb2aNsRnGGCVw2CsdX-kS5FUMjlLET5ITtBwG_QKa9kThkz7czxD4HwKK_DTyZdICn9txiooUjPVvTFR0p03v0lzv_z_ta65zfd-7EYa9Iqt_F1jR4ZeHIdRf" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Expects a list-of-lists of integers.</p>
+<h2>How?</h2>
+<p>Essentially an exercise in performing the transpose.</p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES11), 75 bytes</h1>
 <p>Expects a binary matrix (1 for empty, 0 for filled) and returns a Boolean value.</p>
 <pre class="lang-javascript prettyprint-override"><code>m=&gt;m.some((r,y)=&gt;r.some((v,x)=&gt;v&amp;&amp;!r[x+1]&amp;r[x+2]|!m[y+1]?.[x]&amp;m[y+2]?.[x]))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGiNNulpSVpuhY3vXNt7XL1ivNzUzU0inQqNW3tiqC8Mp0KIK9MTU2xKLpC2zBWDUQZxdYo5kZXArn2etEVsWogthGErakJMfIWk1Nyfl5xfk6qXk5-ukaaRjSXgkK0gqEOElKI1SFO0IBoQaB2LqAbFPT1FdISc4pTubjwuAJmgAFWmxEmlRSV4jAIl05krgFRTgKaBEWorjJAdSdcDVFuw2WiAT4T8TuS6AA2QPc8bpcawlyBbjgkKS1YAKEB" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 95 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 95 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda d:any((g:=lambda a,b:d.get((x+a,y+b),0))(0,0)&lt;g(-1,0)&amp;g(1,0)|g(0,-1)&amp;g(0,1)for(x,y)in d)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=dZFNTsMwEIXF1qcYZUHGqlPFO2TRA7DiAAQht3HSSK0TOQ40Kj0Jm0oITsQGToOdpL8UW8qM37zvRbLfPqvWzku9fc8myUdjs-jm-2khl9NUQiqkbhFzMRkEyaYiHefKIq5GkrWjKWUxpRi7722OEXf1OkdfXnOnRtwfY8ZpVhpcsZYWGlLa_-bn6itVGcxK_ayMRatqO5O1ooKAW0bZxmhYOwpaKoBDBIW2OJtLQzuHXy4WWgamfHFDULpZKiOt2oeNa2uKCum4rhaFxTDRIT2lXbyPPMVd3kBQuiHE-3aJ3vgQBAGJYdgXOn6hi4mjGOxRwg_IYXQs9vzRqNudhXd8f_7HwE8MJHRq6ErHAt-1XiWPAirjLzcL73TVWJHo9fkNbhKd6PvG-jGsM_zzbL0jHB53u-3rLw" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -47,7 +61,7 @@
 at every possible location.</p>
 <p>Out-of-bounds coordinates are treated as having boxes. The <code>[center=box] AND [condition]</code> is equivalent to <code>(NOT [center=space]) AND [condition]</code>, which is equivalent to <code>[center=space] &lt; [condition]</code> (in order for it to hold, the left hand side must be false/0 and the right hand side must be true/1).</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, 9 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, 9 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>üo∟Ö╘└└⌂o
 </code></pre>
 <p><a href="https://staxlang.xyz/#p=816f1c99d4c0c07f6f&amp;i=%5B%5B1,1,1,1,1%5D,%5B1,1,1,1,1%5D,%5B1,1,1,1,2%5D,%5B1,1,1,1,2%5D,%5B1,1,1,1,1%5D%5D%0A%5B%5B1,1,1%5D,%5B2,1,1%5D,%5B1,1,1%5D%5D%0A%5B%5B2,1,1%5D,%5B1,1,1%5D,%5B1,1,2%5D%5D%0A%5B%5B2,2,2,2%5D,%5B2,1,2,1%5D,%5B2,2,2,2%5D%5D%0A%5B%5B2,2,2,2%5D,%5B2,1,2,2%5D,%5B2,2,2,2%5D%5D%0A%5B%5B2,1%5D%5D%0A%5B%5B1,2,1,2%5D%5D%0A%5B%5B1,2,2,1%5D%5D&amp;a=1&amp;m=2" rel="nofollow noreferrer">Run and debug it at staxlang.xyz!</a> <sup><a href="https://staxlang.xyz/#c=cM%2BJ11JE%7CI%25&amp;i=%5B%5B1,1,1,1,1%5D,%5B1,1,1,1,1%5D,%5B1,1,1,1,2%5D,%5B1,1,1,1,2%5D,%5B1,1,1,1,1%5D%5D%0A%5B%5B1,1,1%5D,%5B2,1,1%5D,%5B1,1,1%5D%5D%0A%5B%5B2,1,1%5D,%5B1,1,1%5D,%5B1,1,2%5D%5D%0A%5B%5B2,2,2,2%5D,%5B2,1,2,1%5D,%5B2,2,2,2%5D%5D%0A%5B%5B2,2,2,2%5D,%5B2,1,2,2%5D,%5B2,2,2,2%5D%5D%0A%5B%5B2,1%5D%5D%0A%5B%5B1,2,1,2%5D%5D%0A%5B%5B1,2,2,1%5D%5D&amp;a=1&amp;m=2" rel="nofollow noreferrer">with printable 0/1 output</a></sup></p>
@@ -61,7 +75,7 @@ cM+           concat with transposed copy
         |I    all indices of subarray
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 28 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 28 bytes</h1>
 <pre><code>FreeQ[#|#,{___,,1,,___}]&amp;
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7360oNTUwWrlG@X1/u051fHy8jo6hjg6Qro1V@x9QlJlXEq2sa5cWHZLvWlFQlFpcnJmf5@CckViUmFySWlTsEFwCVJMeXJCTCVSoo8SlpK@nYKBr51eakxMbC@LHqjloQRQFpRbkJCanRispKOnaKSnF1gUnJ@bVVXMpGShAIRcmyxALy0BJB6qJyxChGCSIxAWThhBBMASrNQTrAUNMKUNUKag1hjBzwEqAoly1/wE" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
