--- a/q/275165.html
+++ b/q/275165.html
@@ -53,17 +53,14 @@
     int j = n - 1;
     char pair[80];
     *out = 0;
-    for (; i &lt; n; ) {
+    for (; i &lt; n; i++) {
         if (i != j) {
             sprintf(pair, &quot;%s %s\n&quot;, s[j], s[i]);
             if (!strstr(out, pair)) {
                 strcat(out, pair);
                 j = i;
-                i = 0;
+                i = -1;
             } 
-            else {
-                i++;
-            }
         }
     }
 }
