--- a/q/275210.html
+++ b/q/275210.html
@@ -33,7 +33,7 @@
 
 <pre class="lang-javascript prettyprint-override"><code>f=([v,...a])=&gt;v&amp;&amp;v^(v&amp;=128)|v*f(a)
 </code></pre>
-<p><a href="https://tio.run/##dY6xDoIwFEV3v6ITac2j9LVVyoCb/ATBpEEgGkKNmMbBf69oog7gHc52Tu7ZejvW19PlFg/u2ITQ5rT0wDm3Fct3Por8gfooR2nYw69balmo3TC6vuG962hLSyLuBmGiEKRijMyXJARXc6so4Mu0mLmTJUFkKeBmyTYCFinMuzTZsQTUKWijYKvN/wP7F7X6nVHyk0BAVJAZFZ4" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##pdBNCsIwEAXgvafoqiQy1kySNumibtReQhSKtqJIKyrBhXevTcUfaFTEWbzdN2@YbWay4/Kw2Z8GZbXK67pIyMxAEATZnCYj4/tmQYyfINf0YvoFyWi9rMpjtcuDXbUmBZl57MyYN6fUezfDocd6XaURPtlGoUOp4qZsCtmxVnHlcJOJFWPVanQ5HkIYhQ6apvBIlTopsFgBhvhFvyZT7SarUSqpRSTVDzz6j7P0zgeuo3X7324y/WAcml5oiiGS@n3z1KYUz2bB7ysQUcRa1Fc" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 15 bytes</h1>
 <pre><code>°⋯♭▽≤⊗0:°⊏≡⍜⇌°⊂
