--- a/q/69.html
+++ b/q/69.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>162</td><td>Javascript Operators 162 Bytes</td><td>240828T151214Z</td><td><a href="https://codegolf.stackexchange.com/questions/69/golf-you-a-quine-for-great-good/275206#275206">ThePlane</a></td></tr>
+<tr d-ix="0"><td>161</td><td>Javascript Operators 161 Bytes</td><td>240828T151214Z</td><td><a href="https://codegolf.stackexchange.com/questions/69/golf-you-a-quine-for-great-good/275206#275206">ThePlane</a></td></tr>
 <tr d-ix="1"><td>032</td><td>Jellyfish</td><td>221202T121233Z</td><td><a href="https://codegolf.stackexchange.com/questions/69/golf-you-a-quine-for-great-good/255115#255115">angel_p_</a></td></tr>
 <tr d-ix="2"><td>003</td><td>RProgN 2</td><td>170922T032818Z</td><td><a href="https://codegolf.stackexchange.com/questions/69/golf-you-a-quine-for-great-good/143471#143471">ATaco</a></td></tr>
 <tr d-ix="3"><td>074</td><td>Befalse</td><td>240620T070302Z</td><td><a href="https://codegolf.stackexchange.com/questions/69/golf-you-a-quine-for-great-good/273713#273713">Bubbler</a></td></tr>
@@ -382,21 +382,22 @@
 <tr d-ix="353"><td>054</td><td>JavaScript</td><td>160907T011614Z</td><td><a href="https://codegolf.stackexchange.com/questions/69/golf-you-a-quine-for-great-good/92449#92449">ETHprodu</a></td></tr>
 <tr d-ix="354"><td>nan</td><td></td><td>110128T011512Z</td><td><a href="https://codegolf.stackexchange.com/questions/69/golf-you-a-quine-for-great-good/80#80">Nakilon</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Javascript Operators: 162 Bytes</h1>
+<div id="pu0" class="pu"><h1>Javascript Operators: 161 Bytes</h1>
+<p><em>-1: removed some unnecessary tokens</em></p>
 <p>I wanted to make one of these with just JS operators (and one character)<br>
 What I count as an operator: +-*/^&amp;~|=&lt;&gt;()[]{}?., (+ combination)<br>
 One character I used that isn't an operator: _</p>
 <p>Full character set: +-*/^&amp;~|=&lt;&gt;()[]{}?.,_</p>
-<pre class="lang-js prettyprint-override"><code>(_=(__=(-~[]&lt;&lt;-~[]-~[]),___=((_=&gt;{(_=_)})+[]),____=___[__],_____=___[__+__],______=___[__-~[]],_______=___[__-~[]-~[]])=&gt;____+______+_______+_+_____+____+_____)()
+<pre class="lang-js prettyprint-override"><code>(_=(__=(-~[]|-~[]-~[]),___=((_=&gt;(_=_))+[]),____=___[__],______=___[__-~[]],_______=___[__-~[]-~[]],_____=___[__+++__])=&gt;____+______+_______+_+_____+____+_____)()
 </code></pre>
-<p><a href="https://tio.run/##TYxRDkAwEESv001xAW0vIrIRGiHSCuJHuHrtoviYmZ03yfbVWs311I1L6nxjg9VBoBZISo@iVIqdBQkypNFsZAg7yIdSQywQy6vEJl8QCb@J6M8uDtowlvf6BKX8@n2CgFB7N/vBZoNvhYU8nA" rel="nofollow noreferrer">Try it online!</a></p>
+<p><a href="https://tio.run/##TYtLCoAwDAWv0xD1AlIvIhJEiyilFRVX4tVrYutn8ZLMhDe1e7t2yzhvufO9CUYHRVoRJz/r5pAhgYzE8a/iEAAmx0BUEzU3vCidR/3dzyeLiNwGXYnDWEiLN34cT1AQOu9Wb01h/aAMlOEC" rel="nofollow noreferrer">Try it online!</a></p>
 <h2>Semi-explanation:</h2>
-<pre class="lang-js prettyprint-override"><code>_2=(-~[]&lt;&lt;-~[]-~[]) // 4 (-~[] = 1, 1&lt;&lt;2 = 4)
-_3=((_=&gt;{(_=_)})+[]) // &quot;_=&gt;{(_=_)}&quot; (converts a function to a string)
+<pre class="lang-js prettyprint-override"><code>_2=(-~[]&lt;&lt;-~[]-~[]) // 3 (-~[] = 1, 1|2 = 3)
+_3=((_=&gt;(_=_))+[]) // &quot;_=&gt;(_=_)&quot; (converts a function to a string)
 _4=_3[_2] // &quot;(&quot;
-_5=_3[_2+_2] // &quot;)&quot;
 _6=_3[_2-~[]] // &quot;_&quot;
 _7=_3[_2-~[]-~[]] // &quot;=&quot;
+_5=_3[_2+++_2] // &quot;)&quot;
 (_=()=&gt;_4+_6+_7+_+_5+_4+_5)() // (_=()=&gt;&quot;(_=&quot;+_+&quot;)()&quot;)
 </code></pre>
 <h2>Further explanation:</h2>
@@ -410,9 +411,9 @@ _7=_3[_2-~[]-~[]] // &quot;=&quot;
 etc.</p>
 <h3>Strings/Characters:</h3>
 <p>Strings are normally made by converting a function/object to a string, then slicing.<br>
-&quot;_=&gt;{(_=_)}&quot;: <code>(_=&gt;{(_=_)})+[]</code><br>
+&quot;_=&gt;(_=_)&quot;: <code>(_=&gt;(_=_))+[]</code><br>
 char of str: str[charIdx]<br>
-&quot;_&quot;: slice <code>(_=&gt;{(_=_)})+[]</code><br>
+&quot;_&quot;: slice <code>(_=&gt;(_=_))+[]</code><br>
 etc.</p>
 <p>This can most definitely be improved, and I welcome all of you to try it! Good luck!</p>
 </div>
