--- a/q/75409.html
+++ b/q/75409.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>136</td><td>Python 3</td><td>160713T030413Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/85312#85312">rebellia</a></td></tr>
-<tr d-ix="1"><td>066</td><td>JavaScript Node.js</td><td>240828T022656Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/275199#275199">l4m2</a></td></tr>
+<tr d-ix="0"><td>062</td><td>JavaScript Node.js</td><td>240828T022656Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/275199#275199">l4m2</a></td></tr>
+<tr d-ix="1"><td>136</td><td>Python 3</td><td>160713T030413Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/85312#85312">rebellia</a></td></tr>
 <tr d-ix="2"><td>009</td><td>Uiua</td><td>240827T200129Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/275195#275195">nyxbird</a></td></tr>
 <tr d-ix="3"><td>006</td><td>Japt x</td><td>240827T181535Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/275192#275192">Shaggy</a></td></tr>
 <tr d-ix="4"><td>044</td><td>Ruby</td><td>240827T152526Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/275189#275189">Jordan</a></td></tr>
@@ -46,7 +46,15 @@
 <tr d-ix="17"><td>008</td><td>Pyth</td><td>160312T035851Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75411#75411">Maltysen</a></td></tr>
 <tr d-ix="18"><td>006</td><td>Jelly</td><td>160312T050452Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75412#75412">Dennis</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 136 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 62 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>a=&gt;a.map(x=&gt;x.sort((x,y)=&gt;x-y))[i=0].map(x=&gt;i+=a[1].pop()*x)|i
+</code></pre>
+<p><a href="https://tio.run/##NcnNCsIwDADgu0@SaFqsPyfpXiTkEOYmlbmUdUgHvnv14vHje@pbS7@kvLrZ7kMbY9PYqX9phhq76ostK0ClDX9yGyKneJT/p0NUDuKzZcB9xU9qt11vc7Fp8JM9YATmQGdyVyF2J7pQEEFsXw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Based on Mama Fun Roll's</p>
+<p>-4B by Shaggy by switching Input format</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 136 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>def mdp(n, a, b):
     a = list(reversed(sorted(a)))
@@ -55,13 +63,6 @@
     return res
 </code></pre>
 <p><a href="https://tio.run/##NYzBCsIwEETvfsUcN9KbN6FfUnrYkK0G2k3ZpIJfHxO1cxl4vJn9XZ5Jb7UGWbCFnXQAD/DufkELY8QacyGTl1iWQDlZacXOua/hm/Fn/kdMcmfHRhNPccYVvteSDBFRYawPoVW0n8znphymfVrrBw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 66 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>a=&gt;b=&gt;[a,b].map(x=&gt;x.sort((x,y)=&gt;x-y))[i=0].map(x=&gt;i+=b.pop()*x)|i
-</code></pre>
-<p><a href="https://tio.run/##Pck7DsIwDADQnZPY4ESUz4Sci0QZnNKioFJHTYVSibsHJsan95S3lH5JeTWz3oc2chN2kZ0XisG@JENlV23RZQWotOFPZkP0iY//TweONmsG3Ff8pHbb9ToXnQY76QNG8B2dyVwDgjcnulAXENsX" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>Based on Mama Fun Roll's</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.uiua.org" rel="nofollow noreferrer">Uiua</a>, 9 bytes</h1>
 <pre><code>/+×⇌∩⊏∩⊸⍏
