--- a/q/58615.html
+++ b/q/58615.html
@@ -26,11 +26,11 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>050</td><td>Jellyfish</td><td>221116T041341Z</td><td><a href="https://codegolf.stackexchange.com/questions/58615/1-2-fizz-4-buzz/254593#254593">angel_p_</a></td></tr>
-<tr d-ix="1"><td>080</td><td>tinylisp 2</td><td>240821T230636Z</td><td><a href="https://codegolf.stackexchange.com/questions/58615/1-2-fizz-4-buzz/275084#275084">DLosc</a></td></tr>
-<tr d-ix="2"><td>133</td><td>Rockstar</td><td>210902T164238Z</td><td><a href="https://codegolf.stackexchange.com/questions/58615/1-2-fizz-4-buzz/234990#234990">Shaggy</a></td></tr>
-<tr d-ix="3"><td>130</td><td>tinylisp</td><td>171028T042042Z</td><td><a href="https://codegolf.stackexchange.com/questions/58615/1-2-fizz-4-buzz/146536#146536">DLosc</a></td></tr>
-<tr d-ix="4"><td>128</td><td>Fortran GFortran</td><td>221104T222148Z</td><td><a href="https://codegolf.stackexchange.com/questions/58615/1-2-fizz-4-buzz/254203#254203">roblogic</a></td></tr>
+<tr d-ix="0"><td>125</td><td>Fortran GFortran</td><td>221104T222148Z</td><td><a href="https://codegolf.stackexchange.com/questions/58615/1-2-fizz-4-buzz/254203#254203">roblogic</a></td></tr>
+<tr d-ix="1"><td>050</td><td>Jellyfish</td><td>221116T041341Z</td><td><a href="https://codegolf.stackexchange.com/questions/58615/1-2-fizz-4-buzz/254593#254593">angel_p_</a></td></tr>
+<tr d-ix="2"><td>080</td><td>tinylisp 2</td><td>240821T230636Z</td><td><a href="https://codegolf.stackexchange.com/questions/58615/1-2-fizz-4-buzz/275084#275084">DLosc</a></td></tr>
+<tr d-ix="3"><td>133</td><td>Rockstar</td><td>210902T164238Z</td><td><a href="https://codegolf.stackexchange.com/questions/58615/1-2-fizz-4-buzz/234990#234990">Shaggy</a></td></tr>
+<tr d-ix="4"><td>130</td><td>tinylisp</td><td>171028T042042Z</td><td><a href="https://codegolf.stackexchange.com/questions/58615/1-2-fizz-4-buzz/146536#146536">DLosc</a></td></tr>
 <tr d-ix="5"><td>047</td><td>J</td><td>240721T073806Z</td><td><a href="https://codegolf.stackexchange.com/questions/58615/1-2-fizz-4-buzz/274307#274307">noodle p</a></td></tr>
 <tr d-ix="6"><td>046</td><td>J</td><td>190226T171203Z</td><td><a href="https://codegolf.stackexchange.com/questions/58615/1-2-fizz-4-buzz/180455#180455">Bailis C</a></td></tr>
 <tr d-ix="7"><td>037</td><td>Uiua</td><td>240403T153509Z</td><td><a href="https://codegolf.stackexchange.com/questions/58615/1-2-fizz-4-buzz/272293#272293">noodle p</a></td></tr>
@@ -419,7 +419,22 @@
 <tr d-ix="390"><td>146</td><td>VB.Net</td><td>150925T084617Z</td><td><a href="https://codegolf.stackexchange.com/questions/58615/1-2-fizz-4-buzz/58683#58683">Najkin</a></td></tr>
 <tr d-ix="391"><td>059</td><td>Ruby</td><td>150925T224647Z</td><td><a href="https://codegolf.stackexchange.com/questions/58615/1-2-fizz-4-buzz/58749#58749">Reinstat</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/iatorm/jellyfish" rel="nofollow noreferrer">Jellyfish</a>, <sup><s>124</s> <s>105</s> <s>98</s> <s>97</s> <s>92</s> <s>87</s> <s>64</s></sup> 50 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/fortran/" rel="nofollow noreferrer">Fortran (GFortran)</a>, <sub><s>145 138 134 128</s></sub> 125 bytes</h1>
+<pre class="lang-fortran prettyprint-override"><code>character*8s;do5 i=1,100;s=''
+if(mod(i,3)&lt;1)s='fizz'
+if(mod(i,5)&lt;1)s=trim(s)//'buzz'
+if(s=='')write(s,'(i0)')i
+5 print*,s
+end
+</code></pre>
+<p><a href="https://tio.run/##TctBCsMgEIXhvafITidYohShkHgYG7WdRbTMWAq5vA2ki@4e3@PPlRqFcnnkc/S@PgOFtSUabzzH6gb0VltjZvZSCsxqq1GhvsJi4aCM@/7H7uRGuCmGaZL39@9nf/TwIWxJsZYKDUhA4YYXYWmjZpFK7P0L" rel="nofollow noreferrer">Try it Online!</a></p>
+<p>On line 4 we write the current value of <code>i</code> into the string <code>s</code>. This greatly simplifies the subsequent <code>print</code> statement. <br>
+<s><sub><a href="https://tio.run/##TcvBCsIwEATQe77CW7Il0gQRhJqPiU2ie2giuytCfz5W6sHLMLxhSiOhWI/3spfe50ekOEum4cJTagcM3nrnJg5aKyxmacmgPcHVw0YF1/WPzzsL4WIYxlHfXr@dw/aHN6Fkw1YbdKAB1ZOwymBZ5ZpS@2bvHw" rel="nofollow noreferrer">128b</a></sub></s>
+<s><sub><a href="https://tio.run/##VcrLCgIhGAXgvU/hzgsOKCEENQ/jeKl/kcavEfjyDoNBtTkcvnNSwYYuL7c0yxj@7tD5FlGeab2EQmE1ymhN3ggt8qoYBy2YAAKJP0rgoE7iakRdWYLe2Zfth7fXHxv7c5/bEyE3qSqJOYRy5Bg7" rel="nofollow noreferrer">134b</a></sub></s>
+<s><sub><a href="https://tio.run/##PcvBCsMgEATQe7@it3XBEqUUCiaFfEoaY7uHaNk1l/y8VQK5DMMbJiTOPMXbJxyllPk78TTnhdUTxfl0pcFqa4yTAeBCQa3JK9J37C1WCrTv4E5@HJyZViXYdfDe6t5u8gLAH1PMoEYELe0kPYynkqlMbonep5al/AE" rel="nofollow noreferrer">138b</a></sub></s>
+<s><sub><a href="https://tio.run/##PcvBCsIwEATQu1/hbbMQaYIIQqzgp8QmsQs2Kdl46c/HhKKXYXjDhJRLtvH0CnupdZpttlPxWVyRjUtHGrXUShkeAQ4UxJKcIHnGm8ZGgbYNzJ8vO5dMi2AcBnh@2t5vfAfAMvto1kyxgHggSDb@zf4npBqR8dFR6OlSz1q/" rel="nofollow noreferrer">145b</a></sub></s></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/iatorm/jellyfish" rel="nofollow noreferrer">Jellyfish</a>, <sup><s>124</s> <s>105</s> <s>98</s> <s>97</s> <s>92</s> <s>87</s> <s>64</s></sup> 50 bytes</h1>
 <pre><code>P
 LM`jr'e
 1 B&lt;1
@@ -438,7 +453,7 @@ LM`jr'e
 <h2>explanation</h2>
 <p>TBD</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/dloscutoff/tinylisp2" rel="nofollow noreferrer">tinylisp 2</a>, 80 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/dloscutoff/tinylisp2" rel="nofollow noreferrer">tinylisp 2</a>, 80 bytes</h1>
 
 <pre class="lang-lisp prettyprint-override"><code>(quiet(m(\(N)(w(?(% N 3)(?(% N 5)N&quot;Buzz&quot;)(?(% N 5)&quot;Fizz&quot;&quot;FizzBuzz&quot;))nl))(1to 100
 </code></pre>
@@ -475,7 +490,7 @@ LM`jr'e
   (1to 100)))
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://codewithrockstar.com/" rel="nofollow noreferrer">Rockstar</a>, <s>138</s> <s>135</s> 133 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://codewithrockstar.com/" rel="nofollow noreferrer">Rockstar</a>, <s>138</s> <s>135</s> 133 bytes</h1>
 <pre><code>F takes I&amp;S
 let M be N/I
 turn up M
@@ -508,7 +523,7 @@ say                     :Output
   or N                  :  Logical OR with N
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/tinylisp" rel="nofollow noreferrer">tinylisp</a>, 130 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/tinylisp" rel="nofollow noreferrer">tinylisp</a>, 130 bytes</h1>
 
 <pre class="lang-lisp prettyprint-override"><code>(d f(q((n # %)(i(e n 100)(q Buzz)(i(disp(i #(i % n(q Buzz))(i %(q Fizz)(q FizzBuzz))))0(f(a n 1)(i #(s # 1)2)(i %(s % 1)4
 (f 1 2 4
@@ -552,21 +567,6 @@ say                     :Output
 
 (fizz-buzz 1 2 4)
 </code></pre>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://gcc.gnu.org/fortran/" rel="nofollow noreferrer">Fortran (GFortran)</a>, <s>145 138 134</s> 128 bytes</h1>
-<pre class="lang-fortran prettyprint-override"><code>character*8s;do i=1,100;s=''
-if(mod(i,3)&lt;1)s='fizz'
-if(mod(i,5)&lt;1)s=trim(s)//'buzz'
-if(s=='')write(s,'(i0)')i
-print*,s
-enddo
-end
-</code></pre>
-<p><a href="https://tio.run/##TcvBCsIwEATQe77CW7Il0gQRhJqPiU2ie2giuytCfz5W6sHLMLxhSiOhWI/3spfe50ekOEum4cJTagcM3nrnJg5aKyxmacmgPcHVw0YF1/WPzzsL4WIYxlHfXr@dw/aHN6Fkw1YbdKAB1ZOwymBZ5ZpS@2bvHw" rel="nofollow noreferrer">Try it Online!</a>
-  <s><sub><a href="https://tio.run/##VcrLCgIhGAXgvU/hzgsOKCEENQ/jeKl/kcavEfjyDoNBtTkcvnNSwYYuL7c0yxj@7tD5FlGeab2EQmE1ymhN3ggt8qoYBy2YAAKJP0rgoE7iakRdWYLe2Zfth7fXHxv7c5/bEyE3qSqJOYRy5Bg7" rel="nofollow noreferrer">134b</a></sub></s>
-<s><sub><a href="https://tio.run/##PcvBCsMgEATQe7@it3XBEqUUCiaFfEoaY7uHaNk1l/y8VQK5DMMbJiTOPMXbJxyllPk78TTnhdUTxfl0pcFqa4yTAeBCQa3JK9J37C1WCrTv4E5@HJyZViXYdfDe6t5u8gLAH1PMoEYELe0kPYynkqlMbonep5al/AE" rel="nofollow noreferrer">138b</a></sub></s>
-<s><sub><a href="https://tio.run/##PcvBCsIwEATQu1/hbbMQaYIIQqzgp8QmsQs2Kdl46c/HhKKXYXjDhJRLtvH0CnupdZpttlPxWVyRjUtHGrXUShkeAQ4UxJKcIHnGm8ZGgbYNzJ8vO5dMi2AcBnh@2t5vfAfAMvto1kyxgHggSDb@zf4npBqR8dFR6OlSz1q/" rel="nofollow noreferrer">145b</a></sub></s></p>
-<p>On line 4 we write the current value of <code>i</code> into the string <code>s</code>. This greatly simplifies the subsequent <code>print</code> statement.</p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 47 bytes</h1>
 <pre><code>echo(0{[:\:~&quot;:,:'FizzBuzz'#~4#0=3 5&amp;|)&quot;0&gt;:i.100
