--- a/q/183315.html
+++ b/q/183315.html
@@ -101,7 +101,27 @@ plot 0
 <p>Installed to my Mac via <a href="https://formulae.brew.sh/formula/gnuplot" rel="nofollow noreferrer">Homebrew</a>, and run with <code>gnuplot -persist rgbgrid.plot</code>.
 <br><sub>* I had a solution using lots of <code>set object n rect</code> but <code>se label</code> is golfier.
 <br>* A <a href="http://gnuplot.info/docs_6.1/loc5630.html" rel="nofollow noreferrer">heatmap</a> using <code>with image</code> might be better but I couldn't make it work. </sub></p>
-<p><a href="https://i.sstatic.net/jt1TD3cF.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/jt1TD3cF.png" alt="enter image description here" /></a></p>
+<p>Output: <a href="https://i.sstatic.net/jt1TD3cF.png" rel="nofollow noreferrer">https://i.sstatic.net/jt1TD3cF.png</a></p>
+<h1>gnuplot with <code>terminal dumb</code>, 452 bytes</h1>
+<pre class="lang-gnuplot prettyprint-override"><code>se terminal dumb size 9,7 ansi
+se label 1 at 0,1 '#' tc rgb &quot;magenta&quot;
+se label 2 at 1,1 '#' tc rgb &quot;cyan&quot;
+se label 3 at 2,1 '#' tc rgb &quot;blue&quot;
+se label 4 at 0,2 '#' tc rgb &quot;yellow&quot;
+se label 5 at 1,2 '#' tc rgb &quot;green&quot;
+se label 6 at 2,2 '#' tc rgb &quot;cyan&quot;
+se label 7 at 0,3 '#' tc rgb &quot;red&quot;
+se label 8 at 1,3 '#' tc rgb &quot;yellow&quot;
+se label 9 at 2,3 '#' tc rgb &quot;magenta&quot;
+se tics scale 0
+se yrange [1:4]
+unset border
+unset xtics
+unset ytics
+p [0:3] 0 notitle
+</code></pre>
+<p>Longer program but better output.</p>
+<p><a href="https://i.sstatic.net/YGlRhux7.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/YGlRhux7.png" alt="enter image description here" /></a></p>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript + HTML Canvas, 153 bytes</h1>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
