--- a/q/275210.html
+++ b/q/275210.html
@@ -34,6 +34,20 @@
 <pre class="lang-javascript prettyprint-override"><code>f=([v,...a])=&gt;v&amp;&amp;v^(v&amp;=128)|v*f(a)
 </code></pre>
 <p><a href="https://tio.run/##pdBNCsIwEAXgvafoqiQy1kySNumibtReQhSKtqJIKyrBhXevTcUfaFTEWbzdN2@YbWay4/Kw2Z8GZbXK67pIyMxAEATZnCYj4/tmQYyfINf0YvoFyWi9rMpjtcuDXbUmBZl57MyYN6fUezfDocd6XaURPtlGoUOp4qZsCtmxVnHlcJOJFWPVanQ5HkIYhQ6apvBIlTopsFgBhvhFvyZT7SarUSqpRSTVDzz6j7P0zgeuo3X7324y/WAcml5oiiGS@n3z1KYUz2bB7ysQUcRa1Fc" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<h3>Commented</h3>
+<pre class="lang-javascript prettyprint-override"><code>f = (      // f is a recursive function taking:
+  [ v,     //   v   = next byte from input array
+    ...a ] //   a[] = remaining bytes
+) =&gt;       //
+v          // stop if v is zero or undefined
+&amp;&amp;         // otherwise, get the 7 least significant bits of v
+v ^        // by XOR'ing v ...
+(v &amp;= 128) // ... with its MSB
+           // and update v to its MSB
+|          // merge this with ...
+v *        // ... v (which is now 0x00 or 0x80) multiplied by
+f(a)       // the result of a recursive call
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 15 bytes</h1>
 <pre><code>°⋯♭▽≤⊗0:°⊏≡⍜⇌°⊂
